2012-07-02 Shawn Chin <shawn.chin@_NOSPAM_stfc.ac.uk>

	* src/parallel/env_init.c: srand() now only called in production
	  mode and not in debug (which is what was meant to happen).

	* src/utils/pooled_list.c: Fixed bug in iterator randomisation. There were
	  cases where the index used to calculate offsets could overflow which 
	  would lead to out-of-bounds memory access.

	* src/serial/env_init.c, src/parallel/env_init.c: Output banner now
	  suppressed in production runs.

	* : Tagged as 0.2.2

2009-10-01 Lee-Shawn Chin <shawn.chin@_NOSPAM_stfc.ac.uk>

	* include/mb_settings.h, src/utils/settings.c: libmboard can now 
	  read configuration settings from environment variables
	* :MBOARD_MEMPOOL_RECYCLE env var can be set to allow message 
	  boards to recycle allocated memory. (default: disabled)
	* :MBOARD_MEMPOOL_BLOCKSIZE env var can be set to change the block
	  size of memory pools. (default: 512 messages)
	* :MBOARD_COMM_PROTOCOL env var can be set to change the communication
	  protocol used for board syncs. (default: HANDSHAKE)
	  
	* configure.ac, src/parallel/*.c: renamed --enable-developer config
	  option to --enable-unsafe-checks. 
	  
	* src/*/setaccessmode.c: MB_SetAccessMode() routine added to set
	  access mode of board. 
	* src/*/setsyncpattern.c: MB_SetSyncPattern() routine added to fine tune
	  synchronisation pattern of board.

	* src/parallel/comm*: New communication protocol implemented to make
	  use of board access modes and sync patterns to allow better communication
	  overlap and reduce lock-stepping of processors.
	  
	* src/utils/sqlite3.c, include/sqlite3.h: Upgraded sqlite3 to v3.6.18
	
	* : Tagged as 0.2.1
	   
2009-07-20 Lee-Shawn Chin <shawn.chin@_NOSPAM_stfc.ac.uk>

	* configure.ac, src/parallel/*.c: Added --enable-developer config
	  option to enable additional debug level to be used by FLAME
	  developers. This will include additional run-time checks that
	  uses MPI routines, which is less portable since they may clash